--- a/spider/pom.xml
+++ b/spider/pom.xml
@@ -33,7 +33,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-		
+        
+		  <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+		 		
 		
 		<!-- <dependency>
 			<groupId>net.sf.json-lib</groupId>
